--- a/css/estilo-box-topo.css
+++ b/css/estilo-box-topo.css
@@ -1,5 +1,5 @@
 /*Personalização do Header*/
-.boxTopo{
+#boxTopo{
     display: inline-block;
     position: fixed;
     background: white;
@@ -10,58 +10,58 @@
     
 }
 
-.logo{
+#logo{
     float: left;
     cursor: pointer;
     transition: .5s;
 }
 
-.logo:hover{
+#logo:hover{
     transform: scale(1.05);
     transition: 1s;
 }
 
-.menu{
+#menu{
     float: right;
 }
 
-.menu ul{
+#menu ul{
     display: inline-flex;
     float: left;
     line-height: 60px;
 }
 
-.menu ul li a{
+#menu ul li a{
     margin-right: 30px;
     color: #2b2b2b;
 }
 
-.menu ul li a:hover{
+#menu ul li a:hover{
     color: #954056;
 }
 
-.menu .btnFone{
+#menu #btnFone{
     background-color: #954056;
     color: white;
     padding: 10px 35px 10px 35px;
     border-radius: 50px;
 }
 
-.menu .btnFone:hover{
+#menu #btnFone:hover{
     color: white;
 }
 
 
 /*Comandos media query*/
 @media (max-width: 1070px){
-    .menu{
+    #menu{
         display: none;
         transition: 1s;
     }
 }
 
 @media (max-width: 600px){
-    .boxTopo{
+    #boxTopo{
         padding: 15px 20px 15px 20px;
     }
 }
